# kanban-open

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: README.md  api.md  architecture.md  building.md  configuration.md  data-model.md  development.md  distribution.md  getting-started.md  github-release.md  next-steps.md  roadmap.md  troubleshooting.md  user-guide.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  models.rs
src/lib/: actions.ts  api.ts  boardMutations.ts  dnd.ts  search.ts  toast.svelte.ts  types.ts
src/lib/components/: BoardList.svelte  BoardView.svelte  CardItem.svelte  CardModal.svelte  LabelChips.svelte  LabelsPanel.svelte  ListColumn.svelte  ToastHost.svelte
src/routes/: +layout.svelte  +page.svelte
